Update and rename readme.php to anon.html

--- a/anon.html
+++ b/anon.html
@@ -210,7 +210,7 @@ document.addEventListener('DOMContentLoaded', function (event) {
         <center>
           <small>AnonSec Team</small>
           <br>
-          <img src="https://i.imgur.com/OjF1rUq.png" width="220" height="220" loading="lazy" onerror="this.style.display = 'none'">
+          <img src="https://i.top4top.io/p_3665zcc8s1.png" width="220" height="220" loading="lazy" onerror="this.style.display = 'none'">
           <br>Hacked By <red><i>./Outsiders</i></red><br>
           <font size="2" id="hekerabies">Wh00pz ! your security get down !</font><br><br>
           <small>
